--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "6021624102:AAEIWBsL5bZZGs3we3jjY7TcL6b9znidn_E"                              # Require restart after changing it while bot running
+OWNER_ID = "1760280598"                               # Require restart after changing it while bot running
+TELEGRAM_API = "7978114"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "5f7839feeba133497f24acfd005ef2ec"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
