--- a/config.env
+++ b/config.env
@@ -42,8 +42,8 @@ LEECH_FILENAME_PERFIX = ""
 DUMP_CHAT = ""
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
-BASE_URL = ""
-BASE_URL_PORT = ""
+BASE_URL = "nh-leech-ngahtutkho.koyeb.app"
+BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 #Queueing system
 QUEUE_ALL = ""
