--- a/config.env
+++ b/config.env
@@ -42,7 +42,7 @@ LEECH_FILENAME_PERFIX = ""
 DUMP_CHAT = ""
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
-BASE_URL = "nh-leech-ngahtutkho.koyeb.app"
+BASE_URL = "https://nh-leech-ngahtutkho.koyeb.app/"
 BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 #Queueing system
