--- a/config.env
+++ b/config.env
@@ -4,7 +4,7 @@ TELEGRAM_API = "7978114"                           # Require restart after chang
 TELEGRAM_HASH = "5f7839feeba133497f24acfd005ef2ec"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://Multi:MultiBot@mutlti.9wqqaki.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
