--- a/config.env
+++ b/config.env
@@ -42,7 +42,7 @@ LEECH_FILENAME_PERFIX = ""
 DUMP_CHAT = ""
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
-BASE_URL = "https://nh-leech-ngahtutkho.koyeb.app/"
+BASE_URL = "nh-leech-ngahtutkho.koyeb.app"
 BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 #Queueing system
@@ -57,7 +57,7 @@ MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 # Buttons
-VIEW_LINK = "False"
+VIEW_LINK = "True"
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = "0"
