--- a/config.env
+++ b/config.env
@@ -57,7 +57,7 @@ MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 # Buttons
-VIEW_LINK = "True"
+VIEW_LINK = "true"
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = "0"
